# rust-lto-pgo

./: .gitignore  Dockerfile  README.md
docs/: benchmarking.txt  notes.txt  post.lua  results-health.txt
user-api/: Cargo.toml
user-api/src/: config.rs  main.rs
user-api/src/error/: json_error.rs  mod.rs
user-api/src/handler/: add_user.rs  delete_user.rs  get_user.rs  health.rs  index.rs  mod.rs  stop.rs  user.rs
user-api/src/model/: user.rs
