[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.18.5"
diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.13.1", features = ["signal"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
